--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,15 @@
 
 #container{
 	margin:20px;
+	
 }
-
 #container::before{
-	content : "Before Element";
-	color : red;
-	font-size : 20px;
+	content:"Before Element";
+	color:red;
+	font-size:20px;
 }
-#container :: after{
-	content = "After Element";
-	color : red;
-	font-size : 20px;
+#container::after{
+	content:"After Element";
+	color:red;
+	font-size:20px;
 }
